{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 74,
  "lineage": "df269395-5b46-f32b-005d-831b288236f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:802679893191:instance/i-047322b66d421799e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-047322b66d421799e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "admin",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-029df4b0517b87a5d",
            "private_dns": "ip-10-0-3-143.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f8863e8863e22ce1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022dcdf505814b8a4",
            "tags": {
              "Name": "application"
            },
            "tags_all": {
              "Name": "application"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae95c4c5bcfeb0c7"
            ]
          },
          "dependencies": [
            "aws_key_pair.admin",
            "aws_security_group.ssh-and-port3000",
            "module.network.aws_subnet.private-sub-1",
            "module.network.aws_vpc.tf-playground",
            "tls_private_key.admin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:802679893191:instance/i-037d4058850661b3a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037d4058850661b3a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "admin",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03849403a903aa2bd",
            "private_dns": "ip-10-0-1-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.84",
            "public_dns": "ec2-54-243-21-27.compute-1.amazonaws.com",
            "public_ip": "54.243.21.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04bddfcd050c8e32f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b432d17a993cc8e3",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e9f08d752e160b11"
            ]
          },
          "dependencies": [
            "aws_key_pair.admin",
            "aws_security_group.allow_ssh",
            "module.network.aws_subnet.public-sub-1",
            "module.network.aws_vpc.tf-playground",
            "tls_private_key.admin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802679893191:security-group/sg-0e9f08d752e160b11",
            "description": "allow_ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9f08d752e160b11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow_ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "802679893191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ff05cda92569a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-and-port3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802679893191:security-group/sg-0ae95c4c5bcfeb0c7",
            "description": "ssh-and-port3000 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae95c4c5bcfeb0c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "allow port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-and-port3000",
            "name_prefix": "",
            "owner_id": "802679893191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-and-port3000"
            },
            "tags_all": {
              "Name": "ssh-and-port3000"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ff05cda92569a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076fdad0e0de40a6b",
            "association_id": "eipassoc-0f9a5ffdd6837c51e",
            "domain": "vpc",
            "id": "eipalloc-076fdad0e0de40a6b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04680ded6eb1bff3b",
            "private_dns": "ip-10-0-1-232.ec2.internal",
            "private_ip": "10.0.1.232",
            "public_dns": "ec2-3-214-79-68.compute-1.amazonaws.com",
            "public_ip": "3.214.79.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_eip"
            },
            "tags_all": {
              "Name": "nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.tf-igw",
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802679893191:internet-gateway/igw-0c0b3bf38f661e92b",
            "id": "igw-0c0b3bf38f661e92b",
            "owner_id": "802679893191",
            "tags": {
              "Name": "tf-igw"
            },
            "tags_all": {
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-0e7ff05cda92569a3"
          },
          "dependencies": [
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076fdad0e0de40a6b",
            "connectivity_type": "public",
            "id": "nat-02ab7f6ff75265c80",
            "network_interface_id": "eni-04680ded6eb1bff3b",
            "private_ip": "10.0.1.232",
            "public_ip": "3.214.79.68",
            "subnet_id": "subnet-0b432d17a993cc8e3",
            "tags": {
              "Name": "tf-nat"
            },
            "tags_all": {
              "Name": "tf-nat"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.tf-igw",
            "module.network.aws_subnet.public-sub-1",
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802679893191:route-table/rtb-0971b5e77641741d6",
            "id": "rtb-0971b5e77641741d6",
            "owner_id": "802679893191",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0b3bf38f661e92b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "igw-routes"
            },
            "tags_all": {
              "Name": "igw-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ff05cda92569a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.tf-igw",
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802679893191:route-table/rtb-0a12eb8c3fbae44ce",
            "id": "rtb-0a12eb8c3fbae44ce",
            "owner_id": "802679893191",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02ab7f6ff75265c80",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat-routes"
            },
            "tags_all": {
              "Name": "nat-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ff05cda92569a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.tf-igw",
            "module.network.aws_nat_gateway.tf-nat",
            "module.network.aws_subnet.public-sub-1",
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw-route-association-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fcd8d23b200fc12",
            "route_table_id": "rtb-0971b5e77641741d6",
            "subnet_id": "subnet-0b432d17a993cc8e3"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.tf-igw",
            "module.network.aws_route_table.igw-routes",
            "module.network.aws_subnet.public-sub-1",
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw-route-association-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ae547bc72cf8066",
            "route_table_id": "rtb-0971b5e77641741d6",
            "subnet_id": "subnet-01e6566bb900ffe04"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.tf-igw",
            "module.network.aws_route_table.igw-routes",
            "module.network.aws_subnet.public-sub-2",
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-route-association-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db57d53a66da50a6",
            "route_table_id": "rtb-0a12eb8c3fbae44ce",
            "subnet_id": "subnet-022dcdf505814b8a4"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.tf-igw",
            "module.network.aws_nat_gateway.tf-nat",
            "module.network.aws_route_table.nat-routes",
            "module.network.aws_subnet.private-sub-1",
            "module.network.aws_subnet.public-sub-1",
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-route-association-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00de85af5dc6b7902",
            "route_table_id": "rtb-0a12eb8c3fbae44ce",
            "subnet_id": "subnet-09a499a815d527bc9"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.tf-igw",
            "module.network.aws_nat_gateway.tf-nat",
            "module.network.aws_route_table.nat-routes",
            "module.network.aws_subnet.private-sub-2",
            "module.network.aws_subnet.public-sub-1",
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802679893191:subnet/subnet-022dcdf505814b8a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022dcdf505814b8a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "802679893191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub-1"
            },
            "tags_all": {
              "Name": "private-sub-1"
            },
            "vpc_id": "vpc-0e7ff05cda92569a3"
          },
          "dependencies": [
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802679893191:subnet/subnet-09a499a815d527bc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a499a815d527bc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "802679893191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-sub-2"
            },
            "tags_all": {
              "Name": "private-sub-2"
            },
            "vpc_id": "vpc-0e7ff05cda92569a3"
          },
          "dependencies": [
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802679893191:subnet/subnet-0b432d17a993cc8e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b432d17a993cc8e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "802679893191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-1"
            },
            "tags_all": {
              "Name": "public-sub-1"
            },
            "vpc_id": "vpc-0e7ff05cda92569a3"
          },
          "dependencies": [
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802679893191:subnet/subnet-01e6566bb900ffe04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e6566bb900ffe04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "802679893191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-2"
            },
            "tags_all": {
              "Name": "public-sub-2"
            },
            "vpc_id": "vpc-0e7ff05cda92569a3"
          },
          "dependencies": [
            "module.network.aws_vpc.tf-playground"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-playground",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802679893191:vpc/vpc-0e7ff05cda92569a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-050edff866954a408",
            "default_route_table_id": "rtb-06a1279379e983600",
            "default_security_group_id": "sg-0fe10a4ecf3911812",
            "dhcp_options_id": "dopt-05f3fbf821d424c7c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e7ff05cda92569a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a1279379e983600",
            "owner_id": "802679893191",
            "tags": {
              "Name": "tf-playground"
            },
            "tags_all": {
              "Name": "tf-playground"
            }
          }
        }
      ]
    }
  ]
}